# rldb

./: Cargo.toml  README.md
sql/: 01-05.slt  01-06.slt  01-07.slt  03-01.slt  03-02.slt
src/: db.rs  executor.rs  lib.rs  main.rs  parser.rs  storage.rs  test.rs  types.rs
src/array/: data_chunk.rs  iter.rs  mod.rs  primitive_array.rs  utf8_array.rs
src/binder/: mod.rs
src/binder/expression/: column_ref.rs  mod.rs
src/binder/statement/: create_table.rs  insert.rs  mod.rs  select.rs
src/binder/table_ref/: mod.rs
src/catalog/: column.rs  database.rs  mod.rs  schema.rs  table.rs
src/executor/: create.rs  dummy.rs  evaluator.rs  explain.rs  insert.rs  mod.rs  projection.rs  select.rs  seq_scan.rs  values.rs
src/logical_planner/: create.rs  explain.rs  insert.rs  mod.rs  select.rs
src/physical_planner/: create.rs  explain.rs  insert.rs  mod.rs  projection.rs  seq_scan.rs
src/storage/: column.rs  disk.rs  memory.rs  mod.rs  rowset.rs
