[package]
name = "rldb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = "0.27.0"
rustyline = "10.0.0"
thiserror = "1.0.37"
log = "0.4.17"
env_logger = "0.10.0"

[dev-dependencies]
sqllogictest = "0.8.0"
test-case = "2.2.2"