[package]
name = "rldb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = "0.27.0"
rustyline = "10.0.0"
thiserror = "1.0.37"
log = "0.4.17"
env_logger = "0.10.0"
bitvec = "1.0.1"
prettytable-rs = { version = "0.9.0", default-features = false }
itertools = "0.10.5"
enum_dispatch = "0.3.8"
tokio = { version = "1.22.0", features = ["rt", "rt-multi-thread", "sync", "macros"] }
tokio-stream = "0.1.11"
futures = { version = "0.3.25", default-features = false, features = ["alloc"] }
futures-async-stream = "0.2.5"

[dev-dependencies]
sqllogictest = "0.8.0"
test-case = "2.2.2"